Include en, sw names from OSM

--- a/scripts/osmconf.ini
+++ b/scripts/osmconf.ini
@@ -25,7 +25,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=name,barrier,highway,ref,address,is_in,place,man_made
+attributes=name,name:en,name:sw,barrier,highway,ref,address,is_in,place,man_made,railway
 # keys that, alone, are not significant enough to report a node as a OGR point
 unsignificant=created_by,converted_by,source,time,ele,attribution
 # keys that should NOT be reported in the "other_tags" field
@@ -45,7 +45,7 @@ osm_user=no
 osm_changeset=no
 
 # keys to report as OGR fields
-attributes=name,highway,waterway,aerialway,barrier,man_made
+attributes=name,name:en,name:sw,highway,waterway,aerialway,barrier,man_made,railway,service,electrified,gauge,usage,bridge
 
 # type of attribute 'foo' can be changed with something like
 #foo_type=Integer/Real/String/DateTime
